# AirDesk

./: .gitignore  README.md  airdesk.spec  pyproject.toml
AirDeskNative/: Package.swift
AirDeskNative/Sources/AirDeskNative/: AirDeskNative.swift  CameraManager.swift  GestureEngine.swift  MouseController.swift  OneEuroFilter.swift  OverlayWindow.swift  VisionTracker.swift
airdesk/: __init__.py  app.py  config.py  main.py
airdesk/core/: __init__.py  interaction_controller.py  window_manager.py
airdesk/gestures/: __init__.py  filters.py  gesture_engine.py
airdesk/models/: __init__.py  gesture.py  hand.py  interaction.py  window.py
airdesk/platform/: __init__.py  base.py  macos.py  overlay.py  shadow.py
airdesk/system/: __init__.py  controller.py  intents.py
airdesk/ui/: __init__.py  renderer.py  theme.py
airdesk/vision/: __init__.py  camera.py  hand_tracker.py
tests/: conftest.py  test_filters.py  test_gesture_engine.py  test_interaction_controller.py  test_main.py  test_system_controller.py
