[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airdesk"
version = "0.1.0"
description = "Gesture-controlled virtual monitor prototype powered by OpenCV and MediaPipe."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
dependencies = [
  "mediapipe>=0.10.14",
  "numpy>=1.26",
  "opencv-python>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
airdesk = "airdesk.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["airdesk*"]

[tool.setuptools.package-data]
airdesk = ["assets/*.task"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
